# production-agents-book

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  PRODUCTION-READINESS-REVIEW.md  README.md  content-review.md  outline.md  pyproject.toml
.claude/agents/: cost-optimizer.json  production-architect.json  reliability-engineer.json  security-reviewer.json
.claude/skills/: chapter-writer.md  code-review.md  monitoring-observability.md  production-best-practices.md  security-safety.md
.github/: README.md
.github/workflows/: build.yml  deploy.yml  lint.yml  security.yml  test.yml
appendices/: appendix-a-production-readiness-checklist.md  appendix-b-monitoring-alerting-templates.md  appendix-c-security-review-checklist.md  appendix-d-cost-optimization-playbook.md  appendix-e-incident-response-runbooks.md
chapters/: 01-production-mindset.md  02-reliability-resilience.md  03-observability-debugging.md  04-security-safety.md  05-cost-optimization.md  06-scaling-agent-systems.md  07-performance-optimization.md  08-testing-production-systems.md  09-deployment-patterns.md  10-incident-response.md  11-multi-region-deployment.md  12-platform-architecture.md
code-examples/chapter-02-reliability/complete/: .env.example  Dockerfile  README.md  agent.py  agent_async.py  circuit_breaker.py  circuit_breaker_redis.py  config.py  deployment.yaml  health.py  pyproject.toml  rate_limiter.py  retry.py  tools.py
code-examples/chapter-02-reliability/with-retries/: .env.example  README.md  agent.py  config.py  pyproject.toml  retry.py  tools.py
code-examples/chapter-03-observability/complete/: .env.example  Dockerfile  README.md  agent.py  alertmanager.yml  alerts.yml  docker-compose.yml  health.py  logging_config.py  metrics.py  prometheus.yml  pyproject.toml  tracing.py
code-examples/chapter-04-security/complete/: .env.example  README.md  agent.py  audit_logger.py  config.py  injection_detector.py  input_validator.py  output_filter.py  pyproject.toml  secure_tools.py
code-examples/chapter-05-cost-optimization/: README.md
code-examples/chapter-05-cost-optimization/budget-controls/: budget.py
code-examples/chapter-05-cost-optimization/model-routing/: router.py
code-examples/chapter-05-cost-optimization/with-cost-tracking/: .env.example  agent.py  cost_tracker.py  pyproject.toml
code-examples/chapter-06-scaling/: README.md
code-examples/chapter-06-scaling/complete/: Dockerfile
code-examples/chapter-06-scaling/kubernetes/: deployment.yaml
code-examples/chapter-06-scaling/queue-architecture/: .env.example  api.py  pyproject.toml  worker.py
code-examples/chapter-07-performance/: README.md
code-examples/chapter-08-testing/: README.md
code-examples/chapter-09-deployment/: README.md
code-examples/chapter-10-incident-response/: README.md  pyproject.toml
code-examples/chapter-10-incident-response/alerts/: alert_router.py  prometheus-rules.yaml
code-examples/chapter-10-incident-response/debugging/: debug_tools.py
code-examples/chapter-10-incident-response/postmortems/: 2024-01-15-auth-failure.md
code-examples/chapter-10-incident-response/runbooks/: agent-down.md  high-error-rate.md
code-examples/chapter-11-multi-region/: README.md  pyproject.toml
code-examples/chapter-11-multi-region/compliance/: data_residency.py
code-examples/chapter-11-multi-region/failover/: health-check.yaml  postgres-replication.yaml
code-examples/chapter-11-multi-region/monitoring/: global_dashboard.py
code-examples/chapter-11-multi-region/regions/: deployment.yaml
code-examples/chapter-11-multi-region/terraform/: route53.tf
code-examples/chapter-12-platform/: .env.example  README.md  agent_runtime.py  billing.py  pyproject.toml  quota_manager.py
code-examples/reference-agent/: .dockerignore  Dockerfile  README.md  agent.py  config.py  docker-compose.yml  pyproject.toml  test_agent.py  tools.py
infrastructure/: README.md
infrastructure/docker/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml
infrastructure/kubernetes/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  pvc.yaml  rbac.yaml  redis-statefulset.yaml  secret.yaml.template  service.yaml  servicemonitor.yaml
infrastructure/monitoring/: README.md
infrastructure/monitoring/grafana/: datasources.yml
infrastructure/monitoring/grafana/dashboards/: agent-overview.json  dashboard-provider.yml
infrastructure/monitoring/prometheus/: alerts.yml  prometheus.yml  recording_rules.yml
infrastructure/monitoring/promtail/: promtail-config.yml
infrastructure/terraform/aws/: README.md  dev.tfvars.example  main.tf  production.tfvars.example  variables.tf
