[project]
name = "production-ready-agent"
version = "0.1.0"
description = "Production-ready task automation agent with full reliability patterns"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.39.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.7.0",
    "httpx>=0.27.0",  # For testing FastAPI endpoints
]
